--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Data/Crime_Data_from_2020_to_Present_20240914.csv
 /data/Crime_Data_from_2020_to_Present_20240914.csv
+/data/Crime_Data_from_2020_to_Present_20240914.csv
