--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Data/Crime_Data_from_2020_to_Present_20240914.csv
 /data/Crime_Data_from_2020_to_Present_20240914.csv
 /data/Crime_Data_from_2020_to_Present_20240914.csv
+
+*.zip
