Avance en pgPpal y pgSlave. pgPpal ahora recibe datos de trafico y personas. pgSlave ahora es un clon de pgPpal y se permite ver desde DBeaver | Se crea init-slave, pg_hba, postgresql. | Se mueven los run sh pues no son utiles de momento | Se corrige docker-compose.yml permitiendo la conexión de pgSlave a pgPpal | Se crea restart-compose-rmData.sh, este script sirve para reiniciar el docker compose borrando las datas de pgSlave y pgPpal | Se modifica init.sql para crear el usuario replicator | Se modifica trafico para que no genere tantas impresiones en la terminal tan de seguido, se vuelve molesto, se cambia el tiempo de aleatoriedad de (0, 5) a (5, 10)

--- a/proyecto-final/docker-compose/docker-compose.yml
+++ b/proyecto-final/docker-compose/docker-compose.yml
@@ -11,11 +11,22 @@ services:
     volumes:
       - postgres_ppal_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./pg_hba.conf:/etc/postgresql/pg_hba.conf
+    command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - proyecto-final
 
   db-pg-slave:
     container_name: proyectof-postgres-slave
+    depends_on:
+      db-pg-ppal:
+          condition: service_healthy
     image: postgres:latest
     environment:
       POSTGRES_DB: proyectofslave
@@ -25,7 +36,13 @@ services:
       - "5433:5432"
     volumes:
       - postgres_slave_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init-slave.sh:/docker-entrypoint-initdb.d/init-slave.sh
+    command: postgres -c 'config_file=/var/lib/postgresql/data/postgresql.conf'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - proyecto-final
 
@@ -35,7 +52,8 @@ services:
       dockerfile: Dockerfile-Personas
     container_name: personas-service
     depends_on:
-      - db-pg-ppal
+      db-pg-ppal:
+          condition: service_healthy
     environment:
       DB_HOST: db-pg-ppal
       DB_NAME: proyectofppal
@@ -50,7 +68,8 @@ services:
       dockerfile: Dockerfile-Trafico
     container_name: trafico-service
     depends_on:
-      - db-pg-ppal
+      db-pg-ppal:
+          condition: service_healthy
     environment:
       DB_HOST: db-pg-ppal
       DB_NAME: proyectofppal
