Se agregan los ultimos lectores faltantes, por alguna razón no conecta a Oracle y postgres al momento de transformar pero sí al consultar tablas desde el pentaho | Se actualiza el docker compose | Se crean imagenes de ciertos servicios.

--- a/proyecto-final/docker-compose/docker-compose.yml
+++ b/proyecto-final/docker-compose/docker-compose.yml
@@ -111,6 +111,31 @@ services:
     networks:
       - proyecto-final
 
+  app-cliente-java:
+    build:
+      context: ./apps-lectoras/app-cliente-java
+      dockerfile: Dockerfile-AppClienteJava
+    container_name: app-cliente-java
+    depends_on:
+      db-pg-ppal:
+          condition: service_healthy
+    environment:
+      DB_HOST: db-pg-ppal
+      DB_NAME: proyectofppal
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+    networks:
+      - proyecto-final
+
+  app-cliente-python:
+    build: ./apps-lectoras/app-cliente-python
+    depends_on:
+      - db-pg-slave
+    environment:
+      DB_URL: "dbname='proyectofslave' user='postgres' host='db-pg-slave' password='postgres'"
+    networks:
+      - proyecto-final
+
 networks:
   proyecto-final:
 
