--- a/docker-compose-start/Ejercicio 02/docker-compose.yml
+++ b/docker-compose-start/Ejercicio 02/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - "5432:5432"
 
   web:
-    image: python:3.9-slim
+    image: python:3.13.2-slim
     volumes:
       - ./app:/app
     working_dir: /app
-    command: python app.py
+    command: sh -c "pip install -r requirements.txt && python app.py"
     ports:
       - "5000:5000"
     depends_on:
