--- a/2501-GBD/Proyecto Final/docker-compose.yml
+++ b/2501-GBD/Proyecto Final/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - fintech_network
+    ports:
+      - "5432:5432"
 
   app:
     build: ./app
