--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /2402-SIDI/data/Crime_Data_from_2020_to_Present_20240914.csv
-/packages.microsoft.gpg
 
 *.zip
 *.bak
@@ -8,11 +7,10 @@
 
 
 .dbeaver/credentials-config.json
-.project
 build
 target
 
 
 .vscode/*
 
-app-cliente-pyhton/venv/*
+datingApp-master/
